Updated install libraries

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q bitsandbytes transformers datasets peft accelerate trl"
+    "!pip install -U bitsandbytes transformers datasets peft accelerate trl"
    ]
   },
   {
